<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/atomic_age"
        android:text="@string/welcome_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFC107"
        android:fontFamily="@font/atomic_age"
        android:text="@string/about_alc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        android:onClick="launchAbout"/>

    <Button
        android:id="@+id/my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFC107"
        android:fontFamily="@font/atomic_age"
        android:text="@string/my_profile"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/about"
        app:layout_constraintStart_toStartOf="@+id/about"
        app:layout_constraintTop_toBottomOf="@+id/about"
        android:onClick="LaunchProfile"/>
</androidx.constraintlayout.widget.ConstraintLayout>